--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
   </head>
 
   <body>
-    <header class="logo-ohmyfood-section">
+    <header class="logo-ohmyfood-section logo-ohmyfood-section-menu-page">
       <img src="images\ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
+      <a class="home-button" href="#section-fonctionnement"><p>Fonctionnement</p></a>
+      <a class="home-button" href="#section-restaurants"><p>Restaurants</p></a>
     </header>
 
     <div class="user-location">
@@ -33,10 +35,10 @@
     <div class="reservation-menu">
       <h1 class="h1-welcome-page">Réservez le menu qui vous convient</h1>
       <p class="site-presentation">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-      <a href="#" class="restaurant-list-button">Explorer nos restaurants</a>
+      <a href="#section-restaurants" class="restaurant-list-button">Explorer nos restaurants</a>
     </div>
 
-    <div class="fonctionnement">
+    <div id="section-fonctionnement" class="fonctionnement">
       <h2 class="h2-welcome-page">Fonctionnement</h2>
       <div class="step">
         <div class="paragraph-fonct"><i class="fa-solid fa-1 fa-fw step-number"></i><i class="fa-solid fa-mobile-screen-button fa-fw step-logo"></i><p class="step-text">Choisissez un restaurant</p></div>
@@ -50,7 +52,7 @@
 
     </div>
 
-    <div class="restaurant-list">
+    <div id="section-restaurants" class="restaurant-list">
       <h2 class="h2-welcome-page">Restaurants</h2>
 
       <div class="flexbox-container">
