--- a/le-delice-des-sens-menu.html
+++ b/le-delice-des-sens-menu.html
@@ -3,11 +3,13 @@
 
   <head>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>OhMyFood</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/desktop.css">
+    <link rel="stylesheet" href="css/tablet.css">
 
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +25,9 @@
 
     <!-- logo en tête de page -->
     <header class="logo-ohmyfood-section logo-ohmyfood-section-menu-page">
-      <a class="arrow-margin" href="index.html"><i class="fa-solid fa-arrow-left fa-3x"></i></a>
+      <a class="arrow-margin" href="index.html"><i class="fa-solid fa-arrow-left fa-1x"></i></a>
       <img src="images/ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
+      <a class="home-button" href="index.html"><p>Accueil</p></a>
     </header>
 
     <main>
@@ -40,160 +43,168 @@
             <h1 class="title-menu-page">Le délice des sens</h1>
           </div>
           <div class="div-heart-logo">
-            <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
-            <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
+            <a href="#"><i class="fa-regular fa-heart fa-2x heart-logo"></i></a>
+            <a href="#"><i class="fa-solid fa-heart fa-2x heart-logo-colored"></i></a>
           </div>
         </div>
 
-        <!-- Entrées -->
-        <div>
-          <h2 class="menu-name">ENTRÉES</h2>
-        </div>
+        <div class="flexbox-container-menu">
+          <div class="flexbox-menu">
+            <!-- Entrées -->
+            <div>
+              <h2 class="menu-name">ENTRÉES</h2>
+            </div>
 
-        <!-- Div exemple d'assiette - DEBUT -->
-        <div class="dish-menu dish-1">
-          <div class="compress-style descr-width">
-            <h3 class="compress-style">Tartare de thon</h3>
-            <div class="ingredients-price-spacing">
-              <p class="compress-style paragr-style">Assaisonné au yuzu</p>
+            <!-- Div exemple d'assiette - DEBUT -->
+            <div class="dish-menu dish-1">
+              <div class="compress-style descr-width">
+                <h3 class="compress-style">Tartare de thon</h3>
+                <div class="ingredients-price-spacing">
+                  <p class="compress-style paragr-style">Assaisonné au yuzu</p>
+                </div>
+              </div>
+              <div class="price-moving-div">
+                <p class="price-style">25€</p>
+              </div>
+              <div class="animation-check">
+                <i class="fa-solid fa-circle-check fa-1x check-logo"></i>
+              </div>
+            </div>
+            <!-- Div exemple d'assiette - FIN -->
+
+            <div class="dish-menu dish-2">
+              <div class="compress-style descr-width">
+                <h3 class="compress-style">Bouchée de homard croustillant</h3>
+                <div class="ingredients-price-spacing">
+                  <p class="compress-style paragr-style">Et sa farandole de petis légumes</p>
+                </div>
+              </div>
+              <div class="price-moving-div">
+                <p class="price-style">25€</p>
+              </div>
+              <div class="animation-check">
+                <i class="fa-solid fa-circle-check fa-1x check-logo"></i>
+              </div>
+            </div>
+
+            <div class="dish-menu dish-3">
+              <div class="compress-style descr-width">
+                <h3 class="compress-style">Velouté de cèpes</h3>
+                <div class="ingredients-price-spacing">
+                  <p class="compress-style paragr-style">Aux truffes</p>
+                </div>
+              </div>
+              <div class="price-moving-div">
+                <p class="price-style">20€</p>
+              </div>
+              <div class="animation-check">
+                <i class="fa-solid fa-circle-check fa-1x check-logo"></i>
+              </div>
             </div>
           </div>
-          <div class="price-moving-div">
-            <p class="price-style">25€</p>
-          </div>
-          <div class="animation-check">
-            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-          </div>
-        </div>
-        <!-- Div exemple d'assiette - FIN -->
 
-        <div class="dish-menu dish-2">
-          <div class="compress-style descr-width">
-            <h3 class="compress-style">Bouchée de homard croustillant</h3>
-            <div class="ingredients-price-spacing">
-              <p class="compress-style paragr-style">Et sa farandole de petis légumes</p>
+          <div class="flexbox-menu">
+            <!-- Plats -->
+            <div>
+              <h2 class="menu-name">PLATS</h2>
+            </div>
+
+            <div class="dish-menu dish-1">
+              <div class="compress-style descr-width">
+                <h3 class="compress-style">Poulet rôti aux herbes de provence</h3>
+                <div class="ingredients-price-spacing">
+                  <p class="compress-style paragr-style">Et sa crème de truffe</p>
+                </div>
+              </div>
+              <div class="price-moving-div">
+                <p class="price-style">40€</p>
+              </div>
+              <div class="animation-check">
+                <i class="fa-solid fa-circle-check fa-1x check-logo"></i>
+              </div>
+            </div>
+
+            <div class="dish-menu dish-2">
+              <div class="compress-style descr-width">
+                <h3 class="compress-style">Langouste rôtie</h3>
+                <div class="ingredients-price-spacing">
+                  <p class="compress-style paragr-style">Et ses légumes de saison</p>
+                </div>
+              </div>
+              <div class="price-moving-div">
+                <p class="price-style">35€</p>
+              </div>
+              <div class="animation-check">
+                <i class="fa-solid fa-circle-check fa-1x check-logo"></i>
+              </div>
+            </div>
+
+            <div class="dish-menu dish-3">
+              <div class="compress-style descr-width">
+                <h3 class="compress-style">Côte de boeuf angus</h3>
+                <div class="ingredients-price-spacing">
+                  <p class="compress-style paragr-style">Et sa purée de panais</p>
+                </div>
+              </div>
+              <div class="price-moving-div">
+                <p class="price-style">44€</p>
+              </div>
+              <div class="animation-check">
+                <i class="fa-solid fa-circle-check fa-1x check-logo"></i>
+              </div>
             </div>
           </div>
-          <div class="price-moving-div">
-            <p class="price-style">25€</p>
-          </div>
-          <div class="animation-check">
-            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-          </div>
-        </div>
 
-        <div class="dish-menu dish-3">
-          <div class="compress-style descr-width">
-            <h3 class="compress-style">Velouté de cèpes</h3>
-            <div class="ingredients-price-spacing">
-              <p class="compress-style paragr-style">Aux truffes</p>
+          <div class="flexbox-menu">
+            <!-- Dessert -->
+            <div>
+              <h2 class="menu-name">DESSERTS</h2>
             </div>
-          </div>
-          <div class="price-moving-div">
-            <p class="price-style">20€</p>
-          </div>
-          <div class="animation-check">
-            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-          </div>
-        </div>
 
-        <!-- Plats -->
-        <div>
-          <h2 class="menu-name">PLATS</h2>
-        </div>
-
-        <div class="dish-menu dish-1">
-          <div class="compress-style descr-width">
-            <h3 class="compress-style">Poulet rôti aux herbes de provence</h3>
-            <div class="ingredients-price-spacing">
-              <p class="compress-style paragr-style">Et sa crème de truffe</p>
+            <div class="dish-menu dish-1">
+              <div class="compress-style descr-width">
+                <h3 class="compress-style">Farandole de desserts</h3>
+                <div class="ingredients-price-spacing">
+                  <p class="compress-style paragr-style">Du chef</p>
+                </div>
+              </div>
+              <div class="price-moving-div">
+                <p class="price-style">18€</p>
+              </div>
+              <div class="animation-check">
+                <i class="fa-solid fa-circle-check fa-1x check-logo"></i>
+              </div>
             </div>
-          </div>
-          <div class="price-moving-div">
-            <p class="price-style">40€</p>
-          </div>
-          <div class="animation-check">
-            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-          </div>
-        </div>
 
-        <div class="dish-menu dish-2">
-          <div class="compress-style descr-width">
-            <h3 class="compress-style">Langouste rôtie</h3>
-            <div class="ingredients-price-spacing">
-              <p class="compress-style paragr-style">Et ses légumes de saison</p>
+            <div class="dish-menu dish-2">
+              <div class="compress-style descr-width">
+                <h3 class="compress-style">Crème brulée</h3>
+                <div class="ingredients-price-spacing">
+                  <p class="compress-style paragr-style">Revisitée</p>
+                </div>
+              </div>
+              <div class="price-moving-div">
+                <p class="price-style">22€</p>
+              </div>
+              <div class="animation-check">
+                <i class="fa-solid fa-circle-check fa-1x check-logo"></i>
+              </div>
             </div>
-          </div>
-          <div class="price-moving-div">
-            <p class="price-style">35€</p>
-          </div>
-          <div class="animation-check">
-            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-          </div>
-        </div>
 
-        <div class="dish-menu dish-3">
-          <div class="compress-style descr-width">
-            <h3 class="compress-style">Côte de boeuf angus</h3>
-            <div class="ingredients-price-spacing">
-              <p class="compress-style paragr-style">Et sa purée de panais</p>
+            <div class="dish-menu dish-3">
+              <div class="compress-style descr-width">
+                <h3 class="compress-style">Tiramisu</h3>
+                <div class="ingredients-price-spacing">
+                  <p class="compress-style paragr-style">À la noisette</p>
+                </div>
+              </div>
+              <div class="price-moving-div">
+                <p class="price-style">23€</p>
+              </div>
+              <div class="animation-check">
+                <i class="fa-solid fa-circle-check fa-1x check-logo"></i>
+              </div>
             </div>
-          </div>
-          <div class="price-moving-div">
-            <p class="price-style">44€</p>
-          </div>
-          <div class="animation-check">
-            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-          </div>
-        </div>
-
-        <!-- Dessert -->
-        <div>
-          <h2 class="menu-name">DESSERTS</h2>
-        </div>
-
-        <div class="dish-menu dish-1">
-          <div class="compress-style descr-width">
-            <h3 class="compress-style">Farandole de desserts</h3>
-            <div class="ingredients-price-spacing">
-              <p class="compress-style paragr-style">Du chef</p>
-            </div>
-          </div>
-          <div class="price-moving-div">
-            <p class="price-style">18€</p>
-          </div>
-          <div class="animation-check">
-            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-          </div>
-        </div>
-
-        <div class="dish-menu dish-2">
-          <div class="compress-style descr-width">
-            <h3 class="compress-style">Crème brulée</h3>
-            <div class="ingredients-price-spacing">
-              <p class="compress-style paragr-style">Revisitée</p>
-            </div>
-          </div>
-          <div class="price-moving-div">
-            <p class="price-style">22€</p>
-          </div>
-          <div class="animation-check">
-            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-          </div>
-        </div>
-
-        <div class="dish-menu dish-3">
-          <div class="compress-style descr-width">
-            <h3 class="compress-style">Tiramisu</h3>
-            <div class="ingredients-price-spacing">
-              <p class="compress-style paragr-style">À la noisette</p>
-            </div>
-          </div>
-          <div class="price-moving-div">
-            <p class="price-style">23€</p>
-          </div>
-          <div class="animation-check">
-            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
 
@@ -210,7 +221,7 @@
       <p><i class="fa-solid fa-utensils fa-fw footer-logo fork"></i>Proposer un restaurant</p>
       <p><i class="fa-solid fa-handshake-angle fa-fw footer-logo"></i>Devenir partenaire</p>
       <p>Mentions légales</p>
-      <p>Contact</p>
+      <a href="mailto:someone@yoursite.com"><p>Contact</p></a>
     </footer>
 
   </body>
