--- a/a-la-francaise-menu.html
+++ b/a-la-francaise-menu.html
@@ -27,13 +27,9 @@
     <!-- logo en tête de page -->
     <header class="logo-ohmyfood-section logo-ohmyfood-section-menu-page">
       <a class="arrow-margin" href="index.html"
-        ><i class="fa-solid fa-arrow-left fa-1x"></i
+        ><i class="fa-solid fa-arrow-left fa-1x arrow-color"></i
       ></a>
-      <img
-        src="images/ohmyfood.png"
-        class="logo-ohmyfood"
-        alt="logo ohmyfood"
-      />
+      <img src="images/ohmyfood.png" alt="logo ohmyfood" />
       <a class="home-button" href="index.html"><p>Accueil</p></a>
     </header>
 
