--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>OhMyFood</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css" />
-
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,18 +18,17 @@
       src="https://kit.fontawesome.com/de8316780b.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
     <div class="loader">
       <i class="fas fa-circle-notch fa-3x fa-spin"></i>
     </div>
-    <header class="logo-ohmyfood-section logo-ohmyfood-section-menu-page">
-      <img
-        src="images/ohmyfood.png"
-        class="logo-ohmyfood"
-        alt="logo ohmyfood"
-      />
+    <header class="logo-ohmyfood-section-menu-page">
+      <img src="images/ohmyfood.png" alt="logo ohmyfood" />
       <a class="home-button" href="#section-fonctionnement">
         <p>Fonctionnement</p>
       </a>
