--- a/le-delice-des-sens-menu.html
+++ b/le-delice-des-sens-menu.html
@@ -27,7 +27,7 @@
     <!-- logo en tête de page -->
     <header class="logo-ohmyfood-section logo-ohmyfood-section-menu-page">
       <a class="arrow-margin" href="index.html"
-        ><i class="fa-solid fa-arrow-left fa-1x"></i
+        ><i class="fa-solid fa-arrow-left fa-1x arrow-color"></i
       ></a>
       <img
         src="images/ohmyfood.png"
